@@ -84,17 +84,17 @@ public class TestWang extends TestCase {
         // Setting up DocumentBuilder:
         builder = new ChainedDocumentBuilder();
         builder.addBuilder(DocumentBuilderFactory.getCEDDDocumentBuilder());
-        builder.addBuilder(DocumentBuilderFactory.getJCDDocumentBuilder());
-        builder.addBuilder(DocumentBuilderFactory.getFCTHDocumentBuilder());
+//        builder.addBuilder(DocumentBuilderFactory.getJCDDocumentBuilder());
+//        builder.addBuilder(DocumentBuilderFactory.getFCTHDocumentBuilder());
 //        builder.addBuilder(DocumentBuilderFactory.getJpegCoefficientHistogramDocumentBuilder());
-        builder.addBuilder(DocumentBuilderFactory.getColorLayoutBuilder());
-        builder.addBuilder(DocumentBuilderFactory.getColorHistogramDocumentBuilder());
-        builder.addBuilder(DocumentBuilderFactory.getAutoColorCorrelogramDocumentBuilder());
+//        builder.addBuilder(DocumentBuilderFactory.getColorLayoutBuilder());
+//        builder.addBuilder(DocumentBuilderFactory.getColorHistogramDocumentBuilder());
+//        builder.addBuilder(DocumentBuilderFactory.getAutoColorCorrelogramDocumentBuilder());
 //        builder.addBuilder(DocumentBuilderFactory.getGaborDocumentBuilder());
 //        builder.addBuilder(DocumentBuilderFactory.getTamuraDocumentBuilder());
-        builder.addBuilder(DocumentBuilderFactory.getEdgeHistogramBuilder());
-        builder.addBuilder(DocumentBuilderFactory.getScalableColorBuilder());
-        builder.addBuilder(DocumentBuilderFactory.getJointHistogramDocumentBuilder());
+//        builder.addBuilder(DocumentBuilderFactory.getEdgeHistogramBuilder());
+//        builder.addBuilder(DocumentBuilderFactory.getScalableColorBuilder());
+//        builder.addBuilder(DocumentBuilderFactory.getJointHistogramDocumentBuilder());
 //        builder.addBuilder(new SurfDocumentBuilder());
 //        builder.addBuilder(new MSERDocumentBuilder());
 //        builder.addBuilder(new SiftDocumentBuilder());
@@ -183,10 +183,10 @@ public class TestWang extends TestCase {
 //        computeMAP(ImageSearcherFactory.createAutoColorCorrelogramImageSearcher(1000), "Color Correlogram");
 //        computeMAP(ImageSearcherFactory.createColorLayoutImageSearcher(1000), "Color Layout");
 //        computeMAP(ImageSearcherFactory.createScalableColorImageSearcher(1000), "Scalable Color");
-        computeMAP(ImageSearcherFactory.createEdgeHistogramImageSearcher(1000), "Edge Histogram");
+//        computeMAP(ImageSearcherFactory.createEdgeHistogramImageSearcher(1000), "Edge Histogram");
         computeMAP(ImageSearcherFactory.createCEDDImageSearcher(1000), "CEDD");
-        computeMAP(ImageSearcherFactory.createJCDImageSearcher(1000), "JCD");
-        computeMAP(ImageSearcherFactory.createFCTHImageSearcher(1000), "FCTH");
+//        computeMAP(ImageSearcherFactory.createJCDImageSearcher(1000), "JCD");
+//        computeMAP(ImageSearcherFactory.createFCTHImageSearcher(1000), "FCTH");
 //        computeMAP(ImageSearcherFactory.createJpegCoefficientHistogramImageSearcher(1000), "JPEG Coeffs");
 //        computeMAP(new VisualWordsImageSearcher(1000, DocumentBuilder.FIELD_NAME_SURF_VISUAL_WORDS), "SURF BoVW");
 //        computeMAP(new VisualWordsImageSearcher(1000, DocumentBuilder.FIELD_NAME_MSER_LOCAL_FEATURE_HISTOGRAM_VISUAL_WORDS), "MSER BoVW");
